--- a/recipes/generaltaochicken.html
+++ b/recipes/generaltaochicken.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>General Tao Chicken</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/generaltaochicken.html">General Tao Chicken</a>
-    
+    <h1>General Tao Chicken</h1>
 </body>
 </html>
