--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/generaltaochicken.html">General Tao Chicken</a>
-    
+    <a href="recipes/sloppyjoe.html">Sloppy joes</a>
 </body>
 </html>
