--- a/recipes/generaltaochicken.html
+++ b/recipes/generaltaochicken.html
@@ -8,5 +8,40 @@
 </head>
 <body>
     <h1>General Tao Chicken</h1>
+    <img src="../img/tao.jpg">
+    <h2>Description</h2>
+    <p>This General Tao chicken tastes the same as the one served in Chinese restaurants, without the deep frying. Serve on steamed jasmine or basmati rice.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 pounds skinless, boneless chicken breast halves - cut into bite-size pieces</li>
+        <li>¼ cup cornstarch</li>
+        <li>2 large eggs</li>
+        <li>1 teaspoon salt</li>
+        <li>½ teaspoon ground black pepper</li>
+        <li>6 tablespoons all-purpose flour</li>
+        <li>1 teaspoon baking powder</li>
+        <li>½ cup vegetable oil</li>
+    </ul>
+    <h4>Sauce:</h4>
+    <ul>
+        <li>½ cup chopped green onion</li>
+        <li>2 tablespoons grated fresh ginger root</li>
+        <li>4 teaspoons sesame oil</li>
+        <li>½ cup water</li>
+        <li>½ cup white sugar</li>
+        <li>¼ cup distilled white vinegar</li>
+        <li>2 tablespoons cornstarch</li>
+        <li>2 tablespoons soy sauce</li>
+        <li>¼ cup oyster sauce</li>
+        <li>¼ cup ketchup</li>
+    </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>Coat chicken pieces with cornstarch in a bowl; set aside.</li>
+        <li>Beat eggs, salt, and pepper in a mixing bowl until combined. Stir in flour and baking powder until no large lumps remain. Mix in chicken pieces until evenly coated.</li>
+        <li>Heat vegetable oil in a large skillet or wok over high heat. Cook chicken in hot oil until golden brown and no longer pink on the inside, about 12 minutes. Set chicken aside; keep warm.</li>
+        <li>Make sauce: Reduce heat to medium-high; add green onion, ginger, and sesame oil to the skillet. Cook and stir until onion is limp and ginger begins to brown, about 1 minute. Pour in water, sugar, and vinegar; bring to a boil.</li>
+        <li>Dissolve cornstarch in soy sauce in a small bowl and stir into vinegar mixture along with oyster sauce and ketchup. Cook until sauce has thickened and is no longer cloudy. Stir in chicken; simmer until heated through.</li>
+    </ol>
 </body>
 </html>
